package com.ecommerce.pedido.models.enums;

public enum StatusMesa {
    LIVRE,
    OCUPADA
}
