package com.ecommerce.pedido.models.enums;

public enum StatusPagamento {
    PENDENTE,
    APROVADO,
    RECUSADO;
}
