@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "Models (JPA Entities)" as MODELS {

  class Restaurante {
    - Long id
    - String nome
    - String endereco
    - String telefone
    - String cnpj
    - String tipoCozinha
    - String horarioFuncionamento
    - String imageUrl
  }

  class Mesa {
    - Long id
    - String nomeCliente
    - StatusMesa status
    - LocalDateTime dataAbertura
  }

  class Comanda {
    - Long id
    - String clienteNome
    - StatusComanda status
    - LocalDateTime dataAbertura
    - LocalDateTime dataFechamento
    - BigDecimal valorTotal
  }

  class ComandaItem {
    - Long id
    - Integer quantidade
    - BigDecimal precoUnitario
  }

  class ComandaRateio {
    - Long id
    - BigDecimal valorPago
    - LocalDateTime dataPagamento
  }

  class ItemCompartilhado {
    - Long id
    - Integer quantidade
    - BigDecimal precoUnitario
    - String observacao
  }

  class Produto {
    - Long id
    - String nome
    - String descricao
    - BigDecimal preco
    - BigDecimal precoMeia
    - String categoria
    - String imageUrl
    - boolean disponivel
  }

  class Usuario {
    - Long id
    - String nome
    - String email
    - String telefone
    - String senha
    - Role tipo
  }

  class Pedido {
    - Long id
    - String codigoPedido
    - LocalDateTime dataDoPedido
    - String observacoes
    - String enderecoDeEntrega
    - StatusPedido status
    - OrigemPedido origem
    - TipoConsumo tipoConsumo
    - BigDecimal subtotal
    - BigDecimal taxaEntrega
    - BigDecimal valorTotal
    - String nomeUsuarioConvidado
    - String telefoneUsuarioConvidado
    - String emailUsuarioConvidado
  }

  class ItemPedido {
    - Long id
    - Integer quantidade
    - BigDecimal precoUnitario
    - TamanhoPorcao tamanho
  }

  class Pagamento {
    - Long id
    - BigDecimal valorTotal
    - LocalDateTime dataDoPagamento
    - FormaPagamento formaDePagamento
    - StatusPagamento status
  }

  class TransacaoPix {
    - Long id
    - BigDecimal valor
    - String qrCodeBase64
    - String payloadCopiaCola
    - String txId
    - StatusTransacaoPix status
    - LocalDateTime dataCriacao
    - LocalDateTime dataConfirmacao
  }

  class RegiaoEntrega {
    - Long id
    - String nome
    - BigDecimal valorFrete
  }
}

package "Enums" as ENUMS {
  enum StatusMesa {
    LIVRE
    OCUPADA
  }

  enum StatusComanda {
    ABERTA
    FECHADA
    AGUARDANDO_PIX
    PAGA
  }

  enum Role {
    CLIENTE
    GARCOM
    DONO_RESTAURANTE
  }

  enum StatusPedido {
    PENDENTE
    CONFIRMADO
    EM_PREPARACAO
    SAIU_PARA_ENTREGA
    ENTREGUE
    CANCELADO
  }

  enum FormaPagamento {
    PIX
    CARTAO_CREDITO
    CARTAO_DEBITO
    DINHEIRO
  }

  enum StatusPagamento {
    PENDENTE
    APROVADO
    RECUSADO
    CANCELADO
  }

  enum OrigemPedido {
    DELIVERY
    PRESENCIAL
  }

  enum TipoConsumo {
    COMER_NO_LOCAL
    LEVAR
  }

  enum TamanhoPorcao {
    INTEIRA
    MEIA
  }

  enum StatusTransacaoPix {
    PENDENTE
    APROVADO
    RECUSADO
    EXPIRADO
  }
}

package "DTOs" as DTOS {
  class MesaRequestDTO {
    - Long restauranteId
    - String nomeCliente
  }

  class MesaResponseDTO {
    - Long id
    - String nomeCliente
    - StatusMesa status
    - LocalDateTime dataAbertura
    - Long restauranteId
    - String restauranteNome
    - List<ItemCompartilhadoResponseDTO> itensCompartilhados
  }

  class ComandaRequestDTO {
    - String clienteNome
    - List<ComandaItemRequestDTO> itens
  }

  class ComandaResponseDTO {
    - Long id
    - Long mesaId
    - String mesaNomeCliente
    - Long garcomId
    - String garcomNome
    - String clienteNome
    - StatusComanda status
    - LocalDateTime dataAbertura
    - LocalDateTime dataFechamento
    - BigDecimal valorTotal
    - List<ComandaItemResponseDTO> itens
    - List<ComandaRateioResponseDTO> rateios
  }

  class ComandaItemRequestDTO {
    - Long produtoId
    - Integer quantidade
  }

  class ComandaItemResponseDTO {
    - Long id
    - Long produtoId
    - String nomeProduto
    - Integer quantidade
    - BigDecimal precoUnitario
    - BigDecimal subtotal
  }

  class ItemCompartilhadoRequestDTO {
    - Long produtoId
    - Integer quantidade
    - String observacao
  }

  class ItemCompartilhadoResponseDTO {
    - Long id
    - Long produtoId
    - String nomeProduto
    - Integer quantidade
    - BigDecimal precoUnitario
    - String observacao
  }
}

' ========== Relationships (Models) ==========

Restaurante "1" -- "*" Produto : possui
Restaurante "1" -- "*" Mesa : contém
Restaurante "1" -- "*" Pedido : recebe
Restaurante "1" -- "*" RegiaoEntrega : define
Restaurante "1" -- "*" Usuario : > garçons
Usuario "1" -- "0..1" Restaurante : > dono

Mesa "1" -- "*" ItemCompartilhado : agrega
Mesa "1" -- "*" Comanda : possui

Comanda "1" -- "*" ComandaItem : contém
Comanda "1" -- "*" ComandaRateio : registra
Comanda "1" -- "*" TransacaoPix : gera

Usuario "1" -- "*" Comanda : > garçom atendeu

Produto "1" -- "*" ComandaItem
Produto "1" -- "*" ComandaRateio
Produto "1" -- "*" ItemCompartilhado
Produto "1" -- "*" ItemPedido

Pedido "1" -- "1" Pagamento : possui
Pedido "1" -- "*" ItemPedido : contém
Usuario "1" -- "*" Pedido : fez

' ========== Relationships (DTOs) ==========

MesaResponseDTO --> Mesa : << resposta >>
ComandaResponseDTO --> Comanda : << resposta >>
ComandaItemResponseDTO --> ComandaItem : << resposta >>
ItemCompartilhadoResponseDTO --> ItemCompartilhado : << resposta >>

@enduml
